# TaskChain

./: .gitignore  README.md  config.yaml  empty_config.yaml  pyproject.toml
docs/showcase/: break_down_task.ipynb  run_pipeline_manager.ipynb  showcase-pipeline.ipynb  simple_task_agent.ipynb
task_chain/: interaction.py  singleton.py  utilities.py
task_chain/agents/: agent_registry.py  base.py
task_chain/chains/: __init__.py  loader.py  suggestion_chain.py
task_chain/communication/: base.py  console.py  non_interactive.py  trello.py
task_chain/config/: __init__.py  config.py
task_chain/decompose/: __init__.py  base.py  pipeline.py  project.py  utilities.py
task_chain/executor/: base.py  pipeline.py  project.py  simple.py
task_chain/integrations/: __init__.py
task_chain/llm/: __init__.py  loader.py
task_chain/memory/: pyd_memory.py  task_memory.py
task_chain/parser/: __init__.py  action_parser.py  id_placeholder.py  json_fix_general.py  json_fix_llm.py  simple_result_parser.py  task_parser.py  utilities.py
task_chain/prompts/: __init__.py  loader.py  registry.py
task_chain/schema/: __init__.py  base.py  output_model.py  types.py
task_chain/storage/: base.py  network_graph.py  storage_context.py  task_store.py
task_chain/task/: __init__.py  base.py  task_node.py  utilities.py
task_chain/tools/: chain_as_tool.py  report_issue.py  url_scrape.py  web_search.py
taskchain/: singleton.py  utilities.py
taskchain/agents/: agent_registry.py  base.py
taskchain/chains/: loader.py  suggestion_chain.py
taskchain/communication/: base.py  console.py  (+2 more)
(+122 files in other folders)
