[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TaskChain"
version = "0.0.1"
description = "TaskChain: A LangChain based framework to run and manage Agents for complex task chains"
authors = [
    {name = "Lukasz Kowejsza", email = "lukas.kowejsza@gmail.com"},
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]